<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/cache">
        <EditTextPreference
            android:defaultValue="4"
            android:key="CITY_CACHE_TIME"
            android:summary="@string/set_max_cache_def4h"
            android:title="@string/city_list" />
        <EditTextPreference
            android:defaultValue="4"
            android:key="CLIENT_CACHE_TIME"
            android:summary="@string/set_max_cache_def4h"
            android:title="@string/client_list" />
        <EditTextPreference
            android:defaultValue="4"
            android:key="PRODUCT_CACHE_TIME"
            android:summary="@string/set_max_cache_def4h"
            android:title="@string/product_list" />
        <EditTextPreference
            android:defaultValue="4"
            android:key="COMPANY_CACHE_TIME"
            android:summary="@string/set_max_cache_def4h"
            android:title="@string/company_list" />
        <EditTextPreference
            android:defaultValue="10"
            android:key="NOTE_CACHE_TIME"
            android:summary="@string/main_max_cache_time"
            android:title="@string/notes_list" />
        <EditTextPreference
            android:defaultValue="10"
            android:key="TRANSACTION_CACHE_TIME"
            android:summary="@string/main_max_cache_time"
            android:title="@string/transaction_list" />
        <EditTextPreference
            android:defaultValue="10"
            android:key="STOCK_CACHE_TIME"
            android:summary="@string/main_max_cache_time"
            android:title="@string/stock_list" />
    </PreferenceCategory>
    <PreferenceCategory>
        <Preference
            android:key="CLEAR CACHE"
            android:title="@string/clear_cache" />
        <Preference
            android:key="RESET CACHE"
            android:title="@string/reset_cache" />
    </PreferenceCategory>
</PreferenceScreen>
