<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/data_source">
        <SwitchPreference
            android:defaultValue="false"
            android:disableDependentsState="false"
            android:icon="@drawable/ic_cloud"
            android:key="USE_REMOTE_SERVER"
            android:summary="@string/server_summary"
            android:title="@string/use_remote_server" />
        <SwitchPreference
            android:defaultValue="false"
            android:dependency="USE_REMOTE_SERVER"
            android:icon="@drawable/ic_sell"
            android:key="USE_BACKUP"
            android:summary="@string/backup_summary"
            android:title="@string/use_backups" />
    </PreferenceCategory>
</PreferenceScreen>
